Sat Apr 25 01:46:56 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/FileRepl.pm (AUTOLOAD): Turn off logging; hundreds of
 	getlines fill the logs and are useless.

	* postinstall (create_dirs): Make the new session directory.

	* lib/Majordomo.pm (connect): Don't store sessions in the
 	filespace; store then in a separate directory.
	(s_expire): Just iterate over teh files in the directory and
 	delete the old ones; don't need to bother with the filespace.
	(sessioninfo): Don't go through the filespace.

Fri Apr 24 01:29:33 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* Release of alpha 1.

	* lib/Majordomo.pm: Bump version to alpha1.

Thu Apr 23 01:14:16 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/Token.pm (t_remind): Send consult reminders to the right
 	place.

	* lib/Majordomo.pm: Bump version number.

Wed Apr 22 02:24:12 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/Resend.pm (_r_ck_body): Fix fix error in recursive call.
  	Fix some undef errors.

Tue Apr 21 00:31:45 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/Resend.pm (_r_ck_body, _check_header): Give info about
 	date of original when duplicates are found.

Mon Apr 20 01:54:00 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/List.pm (check_dup): Return the actual data in case of a
 	duplicate, just in case someone wants it.

	* lib/mj_cf_defs.pl: apply_global_xforms should default to 'yes'.

	* lib/Mj/List.pm (default_flags): Another dumb thinko.

Sun Apr 19 16:58:30 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/List.pm (flag_set): Fix dumb thinko.

Sat Apr 18 12:05:06 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/Resend.pm (post): Add separate entities for notification
 	messages.  Purge all entities if not passing them on to bottom
 	half function.

Tue Apr 14 00:41:58 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>
