@@ -6,6 +6,7 @@ BEGIN {
   $::TMPDIR = "/nowhere";
   $::UID    = "baduid";
   $::GID    = "badgid";
+  $::UMASK  = "007";
   $SIG{__WARN__} = sub {print STDOUT "--== $_[0]"};
 
   # Redirect STDERR as soon as possible to catch errors and warnings
@@ -47,6 +48,8 @@ my(%opts, @mess, $approved, $dom, $fh, $fname, $head, $in_body, $inmsg,
 
 die("Not running as UID $::UID") unless $> == $::UID;
 die("Not running as GID $::GID") unless $) == $::GID;
+
+umask oct($::UMASK);
 
 $ENV{'PATH'} = "/bin:/usr/bin:/usr/ucb";
 
