@@ -24,6 +24,7 @@ while (($src,$dst) = splice(@ARGV,0,2)) {
       $line =~ s/^#!\s*\S+/$start/;
       $line =~ s!(^  \$::LIBDIR\s*= ).*!$1\"$config->{'install_dir'}/lib\";!;
       $line =~ s!(^  \$::LISTDIR\s*= ).*!$1\"$config->{'lists_dir'}\";!;
+      $line =~ s!(^  \$::UMASK\s*= ).*!$1\"$config->{'umask'}\";!;
       $line =~ s!(^  \$::TMPDIR\s*= ).*!$1\"$config->{'tmpdir'}\";!;
       $line =~ s!(^  \$::WTMPDIR\s*= ).*!$1\"$config->{'wtmpdir'}\";!;
       $line =~ s!(^  \$::DEFDOM\s*= ).*!$1\"$ {$config->{'domains'}}[0]\";!;
