@@ -1,3 +1,12 @@
+Mon Apr 27 00:02:58 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>
+
+	* bin/mj_shell, bin/mj_email, bin/mj_trigger, bin/mj_confirm,
+ 	bin/mj_resend: Set umask.
+
+	* installbin: Substitute in UMASK.
+
+	* Makefile.PL (configure): Add umask question.
+
 Sat Apr 25 01:46:56 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>
 
 	* lib/Mj/FileRepl.pm (AUTOLOAD): Turn off logging; hundreds of
